--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SuplementaWeb</title>
+    <title>DevSuplementos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +21,12 @@
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="#suplementacao">Suplementação</a></li> <br>
+                <li><a href="#suplementacao">Suplementação</a></li>
                 <li><a href="#sobre">Sobre</a></li>
             </ul>
         </nav>
     </header>
+
     <div class="top-image">
         <img src="img/freepik__candid-image-photography-natural-textures-highly-r__61715.jpeg"
             alt="Imagem Suplementos Premium">
@@ -124,8 +125,9 @@
                     alt="Descrição da Imagem">
             </div>
             <h3>
-                Bem-vindo ao [Nome do Site], o seu ponto de referência para aprender tudo sobre suplementação e como ela
-                pode ser uma aliada na busca por saúde, bem-estar e melhor desempenho físico. Nosso principal objetivo é
+                Bem-vindo ao Dev Suplementos, o seu ponto de referência para aprender tudo sobre suplementação e como
+                ela pode ser uma aliada na busca por saúde, bem-estar e melhor desempenho físico. Nosso principal
+                objetivo é
                 oferecer conteúdo educativo de qualidade para ajudar você a entender os benefícios e a correta
                 utilização dos suplementos alimentares. <br> <br>
 
@@ -159,7 +161,8 @@
     <!-- Rodapé -->
     <footer>
         <p>Desenvolvido por <strong>Euler Fernandes</strong></p>
-        <p>&copy; 2025 Suplementos Premium</p>
+        <p>&copy; 2025 Dev Suplementos</p> <a href="https://www.linkedin.com/in/euler-fernandes-1a9823188/"
+            target="_blank"><img src="img/icons8-linkedin-30.png" alt="linkedin"></a>
     </footer>
 </body>
 
